[package]
name = "ringbuffer-performance-comparison"
version = "0.0.0"
edition = "2018"

publish = false

[dependencies]
concurrent-queue = "1.2"
crossbeam-queue = "0.3"
crossbeam-queue-pr338 = { git = "https://github.com/mgeier/crossbeam", branch = "spsc", package = "crossbeam-queue" }
magnetic = "2"
npnc = "0.2"
ringbuf = "0.2"
rtrb = { path = ".." }

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false # Don't disturb criterion command line parsing

[[bench]]
name = "two_threads"
harness = false
